Added Basic 2Factor Auth method

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "guzzlehttp/guzzle": "7.4.x-dev"
+    },
 
     "autoload": {
         "psr-4": {
