Minor spell error fixed

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
                 "AppsDept\\LaravelLankaBellSMS\\LankaBellSMS"
             ],
             "aliases": {
-                "Calculator": "AppsDept\\LaravelLankaBellSMS\\Facades\\LankaBellSMS"
+                "LankaBellSMS": "AppsDept\\LaravelLankaBellSMS\\Facades\\LankaBellSMS"
             }
         }
     }
